# brandpower-opti-hackathon-light

./: .coveragerc  .gitignore  FILES_MANIFEST.txt  INSTALLATION_VERIFICATION.md  QUICK_START.md  README.md  README_FLASK.md  START_HERE.md  app.py  create_training_data.py  feature_imp.txt  mkdocs.yml  pyproject.toml  requirements.txt  requirements_flask.txt  requirements_production.txt  run_app.py  run_flask.py  temp.ipynb  test_app.py  test_calculate_endpoint.py  test_forecast_pipeline.py
.github/workflows/: ci-cd-dev.yml  tests.yml
frontend/: BrandCompass.py  __init__.py  demo_data.py  main.py  power_forecast.py  run_brandcompass.py  scaled_forecast.py  train_weekly_2.py  utils.py
frontend/pages/: 2_Welcome.py
frontend/services/: __init__.py  forecast_service.py
models/: learner.pkl  predictor.pkl  scaler.pkl  simple_brand_power_forecaster.pkl  unified_brand_power_model.pkl
models/models/: cached_predictions.pkl  trainer.pkl
production_scripts/: __init__.py  __main__.py
production_scripts/agent/: master_agent.py
production_scripts/models/: brand_power_forecaster.pkl  simple_marketing_model.pkl
production_scripts/scripts/: train_simple_forecaster.py
production_scripts/services/: forecast_simulate_service.py
production_scripts/utils/: errors.py
src/: README.md  __init__.py  app.py  config.py  fastapi_app.py  logging_config.py  main.py
src/agent/: __init__.py  master_agent.py
src/api/: __init__.py
templates/: analysis.html  base.html  index.html
tests/: test_forecast_endpoints.py  test_optimizer_endpoint.py  verify_app.py
(+71 files in other folders)
