[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brandpower"
version = "0.1.0"
description = "Brandpower Optimization Hackathon"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "flask",
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "plotly",
    "scikit-learn",
    "lightgbm",
    "openpyxl"
]

[tool.setuptools]
packages = ["frontend", "production_scripts"]
