[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brandpower"
version = "0.1.0"
description = "BrandCompass - Brand Power Optimization Platform"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "plotly>=5.17.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.1.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "python-dotenv>=1.0.0",
    "Jinja2>=3.1.2",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
    "tabulate>=0.9.0",
    "autogluon.timeseries>=1.0.0"
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["old_scripts"]
